--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
         <html>
 <head>
 
-    <script href="components/jquery/jquery-2.2.3js"></script>
-    <script href="components/bootstrap-3.3.6-dist2/css/bootstrap.min.css"></script>
-    <script href="components/bootstrap-3.3.6-dist2/css/bootstrap-theme.min.css"></script>
-    <script href="components/bootstrap-3.3.6-dist2/js/bootstrap.min.js"></script>
+    <link href="components/jquery/jquery-2.2.3js" rel="stylesheet">
+    <link href="components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
+    <script href="components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js"></script>
 
     <title>Shoe Taku</title>
-    
+
 </head>
 <body>
 
