--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="#">ShoeTaku</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
