--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-        <html>
+<html>
 <head>
 
-    <link href="components/jquery/jquery-2.2.3js" rel="stylesheet">
-    <link href="components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
-    <script href="components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js"></script>
+    <script src="./components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
+    <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
+    <script src="./components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
-    <title>Shoe Taku</title>
+    <title>ShoeTaku</title>
 
 </head>
 <body>
@@ -28,20 +28,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
+                <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
@@ -65,6 +53,11 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+    
+    <div class="container-fluid">
+        <div id="partial_view"></div>
+    </div>
+    <script src="./partials/view-controller.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
