--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="./components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
     <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="./components/layout.css" rel="stylesheet">
     <script src="./components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
     <title>ShoeTaku</title>
