--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
                 <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
+                <li><a id="loginPage" class="page" data-page="login" href="#">Login</a></li>
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
