--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 </head>
 
 <body>
+
+<center>    
+<p>Log into our App with Facebook</p>   
 <p><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button></p>
 <p>OR</p>
 <p>Log into our App without Facebook</p>
 <p><button id="loginNotFB">Login</button></p>
+
+</center>
 
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 </body>
