--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ Used to group HTML elements together to format them with CSS-->
      -->
      <input type="button" id="closeButton" value="x" name="closeButton">
      <br>
-     User:<input type="text" id="uid" placeholder="" name="uid">
+     <input type="text" id="uid" placeholder="User" name="uid">
      <br>
-     Password:<input type="password" id="password" placeholder="" name="password">
+     <input type="password" id="password" placeholder="Password" name="password">
      <br>
      <input type="submit" id="login" value="Login">
      <br>
