Change alternative login button's text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button></p>
 <p>OR</p>
 <p>Log into our App without Facebook</p>
-<p><input type="button" id="show_login" value="Show Login"></p>
+<p><input type="button" id="show_login" value="Login"></p>
 
 <!-- Defines a division or section in HTML document
 Used to group HTML elements together to format them with CSS-->
