Moved div out of center tag

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <p>OR</p>
 <p>Log into our App without Facebook</p>
 <p><input type="button" id="show_login" value="Login"></p>
+</center>
 
 <!-- Defines a division or section in HTML document
 Used to group HTML elements together to format them with CSS-->
-<div id="loginForm">
+<div id="loginForm" class="center">
     
     <!-- Creates HTML form for user input
     action: specify url where to send form-data when form is submitted
@@ -50,8 +51,6 @@ Used to group HTML elements together to format them with CSS-->
     </form>
     
 </div>
-
-</center>
 
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 
