Created ajax call to handle form submission

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Used to group HTML elements together to format them with CSS-->
     <!-- Creates HTML form for user input
     action: specify url where to send form-data when form is submitted
     method: get/post ; specify HTTP method to use when sending form data  -->
-    <form method = "post" action = "">
+    <form id="form" method = "post" action = "/controllers/login">
         
      <!-- 
      <input> specifies input field where user can enter data
@@ -62,7 +62,7 @@ Used to group HTML elements together to format them with CSS-->
 <link rel="stylesheet" type="text/css" href="/partials/login_style.css">
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 <script src="./partials/nonFBlogin-effect.js" type="text/javascript" charset="utf-8"></script>
-
+<script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
 
 
 
