Able to make query to database

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ Used to group HTML elements together to format them with CSS-->
      <input type="button" id="closeButton" value="x" name="closeButton">
      <br>
      <label  for="userLabel">Username:</label>
-     <input type="text" id="uid" placeholder="" name="uid">
+     <input type="text" id="uid" name="uid">
      <br>
      <label  for="passwordLabel">Password:</label>
-     <input type="password" id="password" placeholder="" name="password">
+     <input type="password" id="password" name="password">
      <br>
      <input type="submit" id="login" value="Login">
      <br>
@@ -62,7 +62,7 @@ Used to group HTML elements together to format them with CSS-->
 <link rel="stylesheet" type="text/css" href="/partials/login_style.css">
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 <script src="./partials/nonFBlogin-effect.js" type="text/javascript" charset="utf-8"></script>
-<script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
+<!--<script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>-->
 
 
 
