--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ Used to group HTML elements together to format them with CSS-->
      -->
      <input type="button" id="closeButton" value="x" name="closeButton">
      <br>
-     <label  for="userLabel">Username:</label>
-     <input type="text" id="uid" name="uid">
+     <label  for="emailLabel">Email:</label>
+     <input type="text" id="email" name="email">
      <br>
      <label  for="passwordLabel">Password:</label>
      <input type="password" id="password" name="password">
