Reverted back to ajax call

--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@ Used to group HTML elements together to format them with CSS-->
     
 </div>
 
+<div id="error"></div>
+
 </center>
 <link rel="stylesheet" type="text/css" href="/partials/login_style.css">
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 <script src="./partials/nonFBlogin-effect.js" type="text/javascript" charset="utf-8"></script>
-<!--<script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>-->
+<script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
 
 
 
