Implemented form validation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ Used to group HTML elements together to format them with CSS-->
      <br>
      <input type="submit" id="login" value="Login">
      <br>
-      <div id="error"></div>  
+      <div id="error_email"></div>
+      <div id="error_password"></div>  
     </form>
     
 </div>
