Created clickable register link for login box

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Used to group HTML elements together to format them with CSS-->
      <br>
      <input type="submit" id="login" value="Login">
      <br>
+     <a id="register" onclick="someFunction(); return false;" onmouseover="" style="cursor: pointer;">Not a member? Create an account!</a>
+     <br>
       <div id="error_email"></div>
       <div id="error_password"></div>  
     </form>
