Able to login successfully with token

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Used to group HTML elements together to format them with CSS-->
      <input type="submit" id="login" value="Login">
      <br>
      
-     <a id="registerLink" onclick="someFunction(); return false;" onmouseover="" style="cursor: pointer;">Not a member? Create an account!</a>
+     <a id="registerLink" onclick="showRegistrationPopUp(); return false;" onmouseover="" style="cursor: pointer;">Not a member? Create an account!</a>
      <br>
      
       <div id="error_email"></div>
