--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
 <body>
 
 <center>    
-<p>Log into our App with Facebook</p>   
+<p>Welcome to ShoeTaku!</p>
+<p>An application to buy/sell shoes!</p>   
 <p><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button></p>
-
-
-
-<p>OR</p>
-<p>Log into our App without Facebook</p>
 <p><input type="button" id="show_login" value="Login"></p>
 <!-- Defines a division or section in HTML document
 Used to group HTML elements together to format them with CSS-->
