Added "x" for close button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header class="popupHeader">
     
     <span class="header_title">Login</span>
-    <span class="modal_close"><i class="fa fa-times"></i></span>
+    <span class="modal_close">x</span>
  
 </header>
 
