--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="./components/layout.css" rel="stylesheet">
     <script src="./components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
-<link rel="stylesheet" type="text/css" href="/partials/login_style.css">
+    <link href="./components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" >
+
+    <link rel="stylesheet" type="text/css" href="/partials/login_style.css">
 
 
     <title>ShoeTaku</title>
@@ -39,7 +40,7 @@
 <header class="popupHeader">
     
     <span class="header_title">Login</span>
-    <span class="modal_close">x</span>
+    <span class="modal_close"><i class="fa fa-times"></i></span>
  
 </header>
 
