Reformatted login text for Logging in with shoetaku

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
     <link href="./components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" >
 
-    <link rel="stylesheet" type="text/css" href="/partials/login_style.css">
-
-
     <title>ShoeTaku</title>
 
 </head>
@@ -61,7 +58,9 @@
         </div>
         
         <div class="centeredText">
-            <span>Or Login with ShoeTaku</span>
+            <span>Or</span>
+            <br>
+            <span>Login with ShoeTaku</span>
         </div>
 
         <div class="action_btns">
@@ -191,6 +190,7 @@
 <script src="./partials/countries.js" type="text/javascript" charset="utf-8"></script>
 <script src="./partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
 <script src="./partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" href="./partials/login_style.css">
 
 </body>
 
