Shorted Login message button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p><input type="button" id="show_register" value="Register"></p>-->
 
 <!--Modal trigger; a login button that will open a modal when clicked-->
-<p> <a id="modal_trigger" href='#modal' class="btn">Click here to Login or Register!</a> </p>
+<p> <a id="modal_trigger" href='#modal' class="btn">Login/Register</a> </p>
 
 </center>
 
