Positioned login screen message in middle of screen and made font size bigger

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+    
+<div id="login_page_message">
 
 <center>    
 <p>Welcome to ShoeTaku!</p>
@@ -28,8 +30,9 @@
 
 <!--Modal trigger; a login button that will open a modal when clicked-->
 <p> <a id="modal_trigger" href='#modal' class="btn">Login/Register</a> </p>
-
 </center>
+
+</div>
 
 <!-- Modal Container (Popup Box) -->
 <div id="modal" class="popupContainer" style="display:none;">
