Added warning message to fill out all fields for register forms and re-configured width of text fields in register forms to allow room for error divs to be displayed

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <div class="user_register">
         
       <form id="form2" method="post" action = "/controllers/register">
+      <div style="color: red;"> <u>ALL</u> fields are required!</div>
      <br>
      
      <label  for="emailLabel">Email</label>
