Got rid of lean Modal js console errors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <script src="./components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./components/jquery/jquery.leanModal.min.js"></script>
+    <script src="./components/jquery/jquery.leanModal.min.js" type="text/javascript" charset="utf-8"></script>
     <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
     <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="./components/layout.css" rel="stylesheet">
