Got rid of age attribute

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
      <input type="text" id="lastName" name="lastName">
            <div id="error_lastName"></div>
 
-     <br>
+     <!--<br>
      
      <label  for="ageLabel">Age</label>
      <input type="number" id="age" name="age" onkeypress="return isNumberKey(event)">
-           <div id="error_age"></div> 
+           <div id="error_age"></div> -->
 
      <br>
      
