Added close button to main popup dialog box

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 
     <head>
         <script src="./components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
-        <script src="./components/jquery/jquery.leanModal.min.js" type="text/javascript" charset="utf-8"></script>
         <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap.min.css" rel="stylesheet">
         <link href="./components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="./components/layout.css" rel="stylesheet">
         <script src="./components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-        <!-- <link href="./components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" > -->
 
         <title>ShoeTaku</title>
     </head>
@@ -37,8 +35,9 @@
               <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <span class="header_title">Login</span>
-                        <span class="modal_close"><i class="fa fa-times"></i></span>
+                        <!--<span class="modal_close"><i class="fa fa-times"></i></span>-->
                     </div>
 
                     <div class="modal-body">    
