finished adding facebook login to db

--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                         <span class="header_title">Login</span>
                     </div>
                     
-                    <form id="form" method="post" action = "/controllers/login" onsubmit="return validateForm(true)">
+                    <form id="form" method="post" action="/controllers/login" onsubmit="return validateForm(true)">
                         <br>
 
                         <label>Email</label>
-                        <input type="text" id="email" name="email"><div id="error_email"></div>
+                        <input type="text" id="email" name="email">
+                        <div id="error_email"></div>
                         <br>
 
                         <label>Password</label>
