Cleaned up code in accountSettings.php and fixed fb logout and fixed up fb login implementation.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                                 <a class="social_box fb">
                                     <span class="icon_title">Login With Facebook </span>
                                     <span class="fb_login">
-                                        <fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();">
+                                        <!--<fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();">
+                                        </fb:login-button>-->
+                                         <fb:login-button  scope="public_profile,email" onlogin="checkLoginState();">
                                         </fb:login-button>
                                     </span>
                                 </a>
