refactored login.php, register.php, logout.php into authentication.php

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                         <span class="header_title">Login</span>
                     </div>
                     
-                    <form id="form" method="post" action="/controllers/login" onsubmit="return validateForm(true)">
+                    <!--<form id="form" method="post" action="/controllers/login" onsubmit="return validateForm(true)">-->
+                    <form id="form" method="post" action="/controllers/authentication" onsubmit="return validateForm(true)">
                         <br>
 
                         <label>Email</label>
@@ -123,7 +124,8 @@
                         <span class="header_title">Register</span>
                     </div>
                     
-                    <form id="form2" method="post" action = "/controllers/register">
+                    <!--<form id="form2" method="post" action = "/controllers/register">-->
+                    <form id="form2" method="post" action = "/controllers/authentication">
                         <div style="color: red;"> <u>ALL</u> fields are required!</div>
                         <br>
 
